# bigdata-fecaf

./: .gitignore  README.md  dependencies.txt  main.py  pyproject.toml  render.yaml
